test/good/functions/scope01.px

g = 10

func inc(): Int def
    g += 1
    return g

print inc() + inc()
print g
