test/bad/generics/implicit01.px

func inc(x) def
    print x + 1

inc(false)
